# Ryuusei-No-Rockman-2-CN

./: .gitignore  Cargo.toml  README.md  test.txt  字表.txt
.cargo/: config.toml  linker.ld
images/: capcomlogo_local_achivements.psd  cockpit_customing_text.psd  result_local_delete_panel.psd  result_local_loser_delete_panel.psd  splash-screen.ninja.png.md5  splash-screen.psd  splash-screen.saurian.png.md5  subscreen_local_input.psd  subscreen_local_mailer_list.psd  subscreen_local_shop.psd  subscreen_local_sort.psd
images/sfsprites_out/capcomlogo_local.bin/: capcomlogo_local_06.psd  capcomlogo_local_31.psd
images/sfsprites_out/subscreen_local.bin/: subscreen_local_000.psd  subscreen_local_002.psd  subscreen_local_003.psd  subscreen_local_004.psd  subscreen_local_005.psd  subscreen_local_006.psd  subscreen_local_007.psd  subscreen_local_008.psd  subscreen_local_022.psd  subscreen_local_032.psd  subscreen_local_049.psd  subscreen_local_050.psd  subscreen_local_051.psd  subscreen_local_056.psd  subscreen_local_059.psd  subscreen_local_068.psd  subscreen_local_076.psd  subscreen_local_079.psd  subscreen_local_082.psd  subscreen_local_085.psd  subscreen_local_086.psd  (+4 more)
src/rust/tools/: Cargo.toml
src/rust/tools/src/: compile.rs  compile_zig.rs  dump_images.rs  dump_images_cli.rs  gen_splash_screen.rs  genfont.rs  lib.rs  main.rs  pack.rs  setup.rs
src/rust/tools/src/utils/: buildin_palette.rs  mod.rs  path.rs  tile_img.rs
src/zig/: .gitignore  build.zig  linker.ld
tools/plugins/: games.ini  rnr2-utf8-cn-base.tbl  rnr2-utf8-cn.tbl  rnr2-utf8.tbl
(+48 files in other folders)
